--- a/labs/lab1/lab1.ipynb
+++ b/labs/lab1/lab1.ipynb
@@ -21,8 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#<------------INSERT CODE HERE------------>"
@@ -58,9 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 78, 93]\n",
+      "The vector has 5 elements\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's create a vector. We can do this as a Python built-in type: the list\n",
     "vector1 = [1, 2, 4, 78, 93] # we declare the vector as a list of elements\n",
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +90,26 @@
     "## Exercise: create a function that, given a vector and a number,\n",
     "## returns the addition of that number to each element of the vector\n",
     "def vector_plus_num(vector, number):\n",
-    "    \n",
-    "    #<------------INSERT CODE HERE------------>\n",
-    "    \n",
+    "    import numpy\n",
+    "    vector_as_array = numpy.array(vector)\n",
+    "    vector = vector_as_array + number\n",
     "    return vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  7  9 83 98]\n",
+      "[-32 -31 -29  45  60]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's test your function:\n",
     "print(vector_plus_num(vector1, 5))\n",
@@ -112,28 +132,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Exercise: create a function that, given a vector,\n",
     "## returns the mean value of its elements.\n",
     "def vector_mean(vector):\n",
-    "    \n",
-    "    #<------------INSERT CODE HERE------------>\n",
-    "    \n",
-    "    return mu"
+    "    import numpy\n",
+    "    return numpy.mean(vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now test your function:\n",
-    "\n",
-    "#<------------INSERT CODE HERE------------>"
+    "vector_under_test = [1,2,3,4,5]\n",
+    "expected_mean = 3\n",
+    "actual_mean = vector_mean(vector_under_test)\n",
+    "assert actual_mean == expected_mean, \"Expected mean: {0}, got: {1}\".format(expected_mean, actual_mean)"
    ]
   },
   {
@@ -145,22 +167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now let's create a new vector, called vector2, of the same length as vector1.\n",
     "# We will then look at operations with multiple vectors, \n",
     "# such as adding and subtracting them, and vector multiplications.\n",
-    "vector2 = #<------------INSERT CODE HERE------------>\n",
+    "vector2 = vector_under_test\n",
     "\n",
     "assert len(vector1) == len(vector2), \"The vectors are not of the same length\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a function that returns new vector of the same length as vector1 and vector2, \n",
@@ -169,15 +193,36 @@
     "# Feel free to create a function to do this!\n",
     "\n",
     "def add_two_vectors(vec1, vec2):\n",
-    "    #<------------INSERT CODE HERE------------>\n",
+    "    import numpy\n",
+    "    sumVec = numpy.add(vec1,vec2)\n",
     "    return sumVec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  7 82 98]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (5,) (3,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-531177dafd7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Let's test your function:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madd_two_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvector1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvector2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madd_two_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvector1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# If the second print resulted in an error, don't worry about it for now!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-65-87a33dba5d57>\u001b[0m in \u001b[0;36madd_two_vectors\u001b[0;34m(vec1, vec2)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0madd_two_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvec2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0msumVec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvec2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msumVec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,) (3,) "
+     ]
+    }
+   ],
    "source": [
     "# Let's test your function:\n",
     "print(add_two_vectors(vector1, vector2))\n",
@@ -212,24 +257,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def scalar_product(v1, v2):\n",
-    "    #<------------INSERT CODE HERE------------>\n",
+    "    import numpy\n",
+    "    scalarProduct=numpy.dot(v1,v2)\n",
     "    return scalarProduct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "794\n"
+     ]
+    }
+   ],
    "source": [
     "# Test your function\n",
     "\n",
-    "#<------------INSERT CODE HERE------------>"
+    "print(scalar_product(vector1, vector_under_test))\n",
+    "v1 = [1,1]\n",
+    "v2 = [1,1]\n",
+    "expected_dot_product = 2\n",
+    "actual_dot_product = scalar_product(v1, v2)\n",
+    "assert actual_dot_product == expected_dot_product, \"Expected mean: {0}, got: {1}\".format(expected_dot_product, actual_dot_product)"
    ]
   },
   {
@@ -245,8 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a function that receives two matrices as input and returns the matrix multiplication of the two\n",
@@ -254,16 +317,17 @@
     "# https://en.wikipedia.org/wiki/Matrix_multiplication#Definition\n",
     "\n",
     "def matrix_multiplication(matrix1, matrix2):\n",
-    "    \n",
-    "    #<------------INSERT CODE HERE------------>\n",
-    "    \n",
+    "    import numpy\n",
+    "    multipl_result = numpy.matmul(matrix1, matrix2)\n",
     "    return multipl_result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# And let's test your function:\n",
@@ -276,27 +340,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[30 36 42]\n",
+      " [30 36 42]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matrix_multiplication(matrixA, matrixB))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (2,3) and (4,2) not aligned: 3 (dim 1) != 4 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-74-9eb73f74ddd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatrix_multiplication\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatrixA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatrixC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-69-ea5c1c2044e9>\u001b[0m in \u001b[0;36mmatrix_multiplication\u001b[0;34m(matrix1, matrix2)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmatrix_multiplication\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatrix1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatrix2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mmultipl_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatrix1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatrix2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmultipl_result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (2,3) and (4,2) not aligned: 3 (dim 1) != 4 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "print(matrix_multiplication(matrixA, matrixC))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[21 42 63]\n",
+      " [21 42 63]\n",
+      " [21 42 63]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(matrix_multiplication(matrixD, matrixA))"
    ]
