--- a/labs/lab7/TransferLearning_Example1.ipynb
+++ b/labs/lab7/TransferLearning_Example1.ipynb
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1292,6 +1292,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Layer 3 is trainable?: False\n",
+      "\n",
+      "Summary:\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
@@ -1342,8 +1345,8 @@
       "output (Dense)               (None, 4)                 16388     \n",
       "=================================================================\n",
       "Total params: 134,276,932\n",
-      "Trainable params: 16,388\n",
-      "Non-trainable params: 134,260,544\n",
+      "Trainable params: 0\n",
+      "Non-trainable params: 134,276,932\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -1352,7 +1355,11 @@
     "for layer in custom_vgg_model.layers[:-1]:\n",
     "\tlayer.trainable = False\n",
     "\n",
-    "custom_vgg_model.layers[3].trainable\n",
+    "# To show other layers are non-trainable\n",
+    "print(\"Layer 3 is trainable?: \" + str(custom_vgg_model.layers[3].trainable))\n",
+    "\n",
+    "# Summary\n",
+    "print(\"\\nSummary:\")\n",
     "custom_vgg_model.summary()\n",
     "\n",
     "custom_vgg_model.compile(loss='categorical_crossentropy',optimizer='rmsprop',metrics=['accuracy'])"
