Add classification report to classifier

--- a/src/plot_game_runs.ipynb
+++ b/src/plot_game_runs.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/akshay/.local/lib/python3.6/site-packages/matplotlib/__init__.py:886: MatplotlibDeprecationWarning: \n",
-      "examples.directory is deprecated; in the future, examples will be found relative to the 'datapath' directory.\n",
-      "  \"found relative to the 'datapath' directory.\".format(key))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib\n",
@@ -22,12 +12,12 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from sklearn.metrics import classification_report, confusion_matrix  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +84,7 @@
        "4    3     1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +145,32 @@
     "sns.heatmap(cfm, annot=annot, fmt='', ax=ax)\n",
     "plt.savefig(\"../images/cfm_for_UCT_vs_ExIt\")\n",
     "print(cfm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.00      0.00      0.00       185\n",
+      "           2       1.00      0.56      0.72        94\n",
+      "           3       0.08      0.26      0.12        72\n",
+      "\n",
+      "   micro avg       0.21      0.21      0.21       351\n",
+      "   macro avg       0.36      0.28      0.28       351\n",
+      "weighted avg       0.28      0.21      0.22       351\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(df.UCT, df.ExIt))  "
    ]
   },
   {
